--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <main>
       <section class="sidebar">
         <div class="headshot">
-          <img src="https://picsum.photos/200/300">
+          <img src="https://picsum.photos/id/1/200/300">
         </div>
         <h3>Get in touch</h3>
         <ul class="external-links">
